product page work

--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_d_product_sort.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_d_product_sort.sass
@@ -14,7 +14,7 @@
       &.active
         +box-shadow('none')
         .fas
-          color: $colorMain
+          color: $p_choral
     .fas
       font-size: fz(17px)
       color: #cbcfd8
