--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
@@ -13,7 +13,6 @@
 
   .product-price
     &-block
-      margin-bottom: 35px
       font-size: fz(35px)
 
   .product
@@ -44,6 +43,10 @@
     font-weight: $fontBold
   &_actual
     color: $p_choral
+    font-weight: $fontBold
     margin-right: 35px
   &_old
+    font-weight: $fontBold
     text-decoration: line-through
+.discount
+  margin-bottom: rem(35)
