--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/placeholder/_placeholder.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/placeholder/_placeholder.sass
@@ -2,7 +2,7 @@
   border: $borderMain
   padding: 5px 10px
   height: 55px
-  width: 100%
+  //width: 100%
   outline: none
   background: #fff
   margin-top: 0
