--- a/catalog/view/theme/d_visualize/template/component/product_section/jag.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_section/jag.twig
@@ -72,13 +72,16 @@
                     {% endif %}
                 </div>
             </div>
+
+
             {% if column_left or column_right %}
             <div class="col-sm-6">
                 {% else %}
-                <div class="col-sm-6">
+            <div class="col-sm-6">
                     <h1 class="heading-h1">{{ heading_title }}</h1>
                     <div id="product" class="product-info hidden-xs hidden-sm">
                         {% endif %}
+
                         {% if review_status %}
                             <div class="product-rating">
                                 <div class="rating" style="cursor: default">
@@ -115,153 +118,22 @@
                         {% if price %}
                             <div class="product-price-block">
                                 {% if not special %}
-                                    <span class="product-price product-price_actual like-heading-h3">{{ price }}</span>
+                                    <span class="product-price product-price_actual like-heading-h1 bold">{{ price }}</span>
                                 {% else %}
-                                    <span class="product-price product-price_actual like-heading-h3">{{ special }}</span>
-                                    <span class="product-price product-price_old like-heading-h3">{{ price }}</span>
+                                    <span class="product-price product-price_actual like-heading-h1 bold">{{ special }}</span>
+                                    <span class="product-price product-price_old like-heading-h1 bold">{{ price }}</span>
                                 {% endif %}
-                                {% if discounts %}
+                            </div>
+                            {% if discounts %}
+                                <ul class="discount">
                                     {% for discount in discounts %}
                                         <li>{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
                                     {% endfor %}
-                                {% endif %}
-                            </div>
+                                </ul>
+                            {% endif %}
                         {% endif %}
-
                         {# *** OPTIONS *** #}
-                        {% if options %}
-                            {% for option in options %}
-                                {% if option.type == 'select' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <select name="option[{{ option.product_option_id }}]"
-                                                id="input-option{{ option.product_option_id }}" class="form-control">
-                                            <option value="">{{ text_select }}</option>
-                                            {% for option_value in option.product_option_value %}
-                                                <option value="{{ option_value.product_option_value_id }}">{{ option_value.name }}
-                                                    {% if option_value.price %}
-                                                        ({{ option_value.price_prefix }}{{ option_value.price }})
-                                                    {% endif %} </option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'radio' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label">{{ option.name }}</label>
-                                        <div id="input-option{{ option.product_option_id }}"
-                                             class="options"> {% for option_value in option.product_option_value %}
-                                                <label class="product-option-wrap">
-                                                    <input type="radio" name="option[{{ option.product_option_id }}]"
-                                                           value="{{ option_value.product_option_value_id }}"
-                                                           class="field field--radio"/>
-                                                    {% if option_value.image %}
-                                                        <div class="product-option"></div>
-                                                        <img src="{{ option_value.image }}"
-                                                             alt="{{ option_value.name }} {% if option_value.price %} {{ option_value.price_prefix }} {{ option_value.price }} {% endif %}"
-                                                             class="img-thumbnail" />{% endif %}
-                                                    {{ option_value.name }}
-                                                    {% if option_value.price %}
-                                                        ({{ option_value.price_prefix }}{{ option_value.price }})
-                                                    {% endif %} </label>
-                                            {% endfor %} </div>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'checkbox' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label">{{ option.name }}</label>
-                                        <div id="input-option{{ option.product_option_id }}"> {% for option_value in option.product_option_value %}
-                                                <div class="checkbox">
-                                                    <label>
-                                                        <input type="checkbox"
-                                                               name="option[{{ option.product_option_id }}][]"
-                                                               value="{{ option_value.product_option_value_id }}"/>
-                                                        {% if option_value.image %} <img src="{{ option_value.image }}"
-                                                                                         alt="{{ option_value.name }} {% if option_value.price %} {{ option_value.price_prefix }} {{ option_value.price }} {% endif %}"
-                                                                                         class="img-thumbnail"/> {% endif %}
-                                                        {{ option_value.name }}
-                                                        {% if option_value.price %}
-                                                            ({{ option_value.price_prefix }}{{ option_value.price }})
-                                                        {% endif %} </label>
-                                                </div>
-                                            {% endfor %} </div>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'text' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <input type="text" name="option[{{ option.product_option_id }}]"
-                                               value="{{ option.value }}" placeholder="{{ option.name }}"
-                                               id="input-option{{ option.product_option_id }}" class="form-control"/>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'textarea' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <textarea name="option[{{ option.product_option_id }}]" rows="5"
-                                                  placeholder="{{ option.name }}"
-                                                  id="input-option{{ option.product_option_id }}"
-                                                  class="form-control">{{ option.value }}</textarea>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'file' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label">{{ option.name }}</label>
-                                        <button type="button" id="button-upload{{ option.product_option_id }}"
-                                                data-loading-text="{{ text_loading }}"
-                                                class="btn btn-default btn-block"><i
-                                                    class="fa fa-upload"></i> {{ button_upload }}</button>
-                                        <input type="hidden" name="option[{{ option.product_option_id }}]" value=""
-                                               id="input-option{{ option.product_option_id }}"/>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'date' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <div class="input-group date">
-                                            <input type="text" name="option[{{ option.product_option_id }}]"
-                                                   value="{{ option.value }}" data-date-format="YYYY-MM-DD"
-                                                   id="input-option{{ option.product_option_id }}"
-                                                   class="form-control"/>
-                                            <span class="input-group-btn">
-                <button class="btn btn-default" type="button"><i class="fa fa-calendar"></i></button>
-                </span></div>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'datetime' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <div class="input-group datetime">
-                                            <input type="text" name="option[{{ option.product_option_id }}]"
-                                                   value="{{ option.value }}" data-date-format="YYYY-MM-DD HH:mm"
-                                                   id="input-option{{ option.product_option_id }}"
-                                                   class="form-control"/>
-                                            <span class="input-group-btn">
-                <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
-                </span></div>
-                                    </div>
-                                {% endif %}
-                                {% if option.type == 'time' %}
-                                    <div class="form-group{% if option.required %} required {% endif %}">
-                                        <label class="control-label"
-                                               for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                                        <div class="input-group time">
-                                            <input type="text" name="option[{{ option.product_option_id }}]"
-                                                   value="{{ option.value }}" data-date-format="HH:mm"
-                                                   id="input-option{{ option.product_option_id }}"
-                                                   class="form-control"/>
-                                            <span class="input-group-btn">
-                <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
-                </span></div>
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
+                        {% include components.options.template %}
                         {# *** END OPTIONS *** #}
 
                         <div class="form-group">
@@ -287,7 +159,7 @@
             <div class="h3">{{ text_related }}</div>
             <div class="row">
                 {% for product in products %}
-                {% if column_left and column_right %}
+                    {% if column_left and column_right %}
                 <div class="col-xs-8 col-sm-6">
                     {% else %}
                     {% if column_left or column_right %}
