--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/extension/_advanced_options.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/extension/_advanced_options.sass
@@ -1,10 +1,18 @@
+.options-wrap
+  .form-group
+    margin-bottom: rem(50)
+  label.control-label
+    @extend .like-heading-h3
+    margin-bottom: rem(14)
 .custom-control
   cursor: pointer
   transition: all .3s ease
   box-sizing: content-box
 
+
 .options
   display: flex
+
 
 input[type=radio], input[type=checkbox]
   position: absolute
@@ -110,3 +118,8 @@ input[type=radio], input[type=checkbox]
             height: 71px
             background: #dedede
             transform: rotate(51deg)
+
+.product-option-wrap
+  display: flex
+  align-items: center
+  margin-right: rem(5)
