--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
@@ -203,7 +203,7 @@ $cartIconMark: $p_burnt_sienna
 $containerWidth: 1470px
 
 // rating
-$ratingFilled: $colorMain
+$ratingFilled: $p_choral
 $ratingEmpty: #bdc0c4
 
 //pagination
