--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
@@ -22,12 +22,12 @@
       margin-bottom: 30px
     &-quantity
       margin-bottom: 55px
-    &-rating
-      +flex
-      align-items: center
-      margin-bottom: 40px
-      .rating
-        margin-right: 60px
+    //&-rating
+    //  +flex
+    //  align-items: center
+    //  margin-bottom: 40px
+    //  .rating
+    //    margin-right: 60px
     &-description
       margin-top: rem(175px)
 
