--- a/catalog/view/theme/d_visualize/template/component/d_rating/d_jag.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_rating/d_jag.twig
@@ -1,5 +1,5 @@
-<div class="inline-block rating">
-    <input  value="2.5" class="rating-loading">
+<div class="rating">
+    <input value="{{ rating }}" name="rating" class="rating-loading">
 </div>
 <script>
 	$(document).on('ready', function(){
