--- a/catalog/view/theme/d_visualize/template/partial/d_rating.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_rating.twig
@@ -1,1 +1,1 @@
-{% include components.d_rating.template with components.d_rating %}
+{% include components.d_rating.template with components.d_rating|merge({rating:rating}) %}
