--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_rating.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_rating.sass
@@ -35,6 +35,24 @@
       &.empty
         z-index: 0
     .rating-symbol-foreground
+      top: 0
       overflow: hidden !important
       .fa-star
         color: $ratingFilled
+
+.symbol
+  display: inline-block
+  border-radius: 50%
+  border: 5px double white
+  width: 30px
+  height: 30px
+
+
+.symbol-empty
+  background-color: #ccc
+
+
+.symbol-filled
+  background-color: black
+
+
